// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migrate to 19.1.0 NgxsModule.forRoot migrate empty forRoot 1`] = `
"
      import { NgxsModule, DispatchOutsideZoneNgxsExecutionStrategy } from '@ngxs/store';
      import { NgModule } from '@angular/core';
      import { BrowserModule } from '@angular/platform-browser';

      import { AppRoutingModule } from './app-routing.module';
      import { AppComponent } from './app.component';

        @NgModule({
          declarations: [
            AppComponent
          ],
          imports: [
            BrowserModule,
            AppRoutingModule,
            NgxsModule.forRoot([], { executionStrategy: DispatchOutsideZoneNgxsExecutionStrategy })
          ],
          bootstrap: [AppComponent]
        })
        export class AppModule { }
      "
`;

exports[`Migrate to 19.1.0 NgxsModule.forRoot migrate forRoot from a constant array 1`] = `
"
      import { NgxsModule, DispatchOutsideZoneNgxsExecutionStrategy } from '@ngxs/store';
      import { NgModule } from '@angular/core';
      import { BrowserModule } from '@angular/platform-browser';

      import { AppRoutingModule } from './app-routing.module';
      import { AppComponent } from './app.component';

      const imports = [
        BrowserModule,
        AppRoutingModule,
        NgxsModule.forRoot(states, {foo:'bar', executionStrategy: DispatchOutsideZoneNgxsExecutionStrategy})
      ];

        @NgModule({
          declarations: [
            AppComponent
          ],
          imports,
          bootstrap: [AppComponent]
        })
        export class AppModule { }
      "
`;

exports[`Migrate to 19.1.0 NgxsModule.forRoot migrate forRoot with states 1`] = `
"
      import { NgxsModule, DispatchOutsideZoneNgxsExecutionStrategy } from '@ngxs/store';
      import { NgModule } from '@angular/core';
      import { BrowserModule } from '@angular/platform-browser';

      import { AppRoutingModule } from './app-routing.module';
      import { AppComponent } from './app.component';

        @NgModule({
          declarations: [
            AppComponent
          ],
          imports: [
            BrowserModule,
            AppRoutingModule,
            NgxsModule.forRoot(states, { executionStrategy: DispatchOutsideZoneNgxsExecutionStrategy })
          ],
          bootstrap: [AppComponent]
        })
        export class AppModule { }
      "
`;

exports[`Migrate to 19.1.0 NgxsModule.forRoot migrate forRoot with states and existing options 1`] = `
"
      import { NgxsModule, DispatchOutsideZoneNgxsExecutionStrategy } from '@ngxs/store';
      import { NgModule } from '@angular/core';
      import { BrowserModule } from '@angular/platform-browser';

      import { AppRoutingModule } from './app-routing.module';
      import { AppComponent } from './app.component';

        @NgModule({
          declarations: [
            AppComponent
          ],
          imports: [
            BrowserModule,
            AppRoutingModule,
            NgxsModule.forRoot(states, {foo:'bar', executionStrategy: DispatchOutsideZoneNgxsExecutionStrategy})
          ],
          bootstrap: [AppComponent]
        })
        export class AppModule { }
      "
`;

exports[`Migrate to 19.1.0 provideStore migrate provideStore with states and existing options 1`] = `
"
      import { bootstrapApplication } from '@angular/platform-browser';
      import { AppComponent } from './app/app.component';
      import { provideStore, DispatchOutsideZoneNgxsExecutionStrategy } from '@ngxs/store';

      bootstrapApplication(AppComponent, {
        providers: [provideStore([], {foo:'bar', executionStrategy: DispatchOutsideZoneNgxsExecutionStrategy})],
      });

      "
`;

exports[`Migrate to 19.1.0 provideStore migrate provideStore with states and plugins 1`] = `
"
      import { bootstrapApplication } from '@angular/platform-browser';
      import { AppComponent } from './app/app.component';
      import { provideStore, DispatchOutsideZoneNgxsExecutionStrategy } from '@ngxs/store';

      bootstrapApplication(AppComponent, {
        providers: [provideStore([], { executionStrategy: DispatchOutsideZoneNgxsExecutionStrategy }, withNgxsRouterPlugin(), withNgxsStoragePlugin())],
      });

      "
`;

exports[`Migrate to 19.1.0 provideStore migrate provideStore with states without options 1`] = `
"
      import { bootstrapApplication } from '@angular/platform-browser';
      import { AppComponent } from './app/app.component';
      import { provideStore, DispatchOutsideZoneNgxsExecutionStrategy } from '@ngxs/store';

      bootstrapApplication(AppComponent, {
        providers: [provideStore([], { executionStrategy: DispatchOutsideZoneNgxsExecutionStrategy })],
      });

      "
`;

exports[`Migrate to 19.1.0 provideStore migrate provideStore with states, options and plugins 1`] = `
"
      import { bootstrapApplication } from '@angular/platform-browser';
      import { AppComponent } from './app/app.component';
      import { provideStore, DispatchOutsideZoneNgxsExecutionStrategy } from '@ngxs/store';

      bootstrapApplication(AppComponent, {
        providers: [provideStore([], {foo:'bar', executionStrategy: DispatchOutsideZoneNgxsExecutionStrategy}, withNgxsRouterPlugin(), withNgxsStoragePlugin())],
      });

      "
`;
